cards fixes on mobile view

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -8,8 +8,13 @@ and (max-device-width: 480px){
     }
 
     div.cards-row .card {
-        width: 240px;
+        width: 100%;
         margin: 10px auto;
+    }
+
+    header.card-header {
+        width: 100%;
+        height: 86px;
     }
 
 }
